Updated HTML ids with ones needed to change color in JS function

--- a/index.html
+++ b/index.html
@@ -40,77 +40,77 @@
         <tbody id="planner-table">
           <tr>
             <th class="time-tbl" scope="row">8:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t9AM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime8"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">9:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t9AM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime9"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">10:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t10AM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime10"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">11:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t11AM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime11"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">12:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t12PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime12"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">1:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t1PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime13"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">2:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t2PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime14"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">3:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t3PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime15"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">4:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t4PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime16"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">5:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t5PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime17"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
           </tr>
           <tr>
             <th class="time-tbl" scope="row">6:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" data-id="t5PM"></td>
+            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime18"></td>
             <td class="plan-save">
               <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
             </td>
