testing issue with textarea

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </thead>
         <tbody id="planner-table">
           <tr>
-            <th class="time-tbl" scope="row">8:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime8">
+            <th class="time-tbl row">8:00 AM</th>
+            <td>
               <textarea id="projectTime8" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -49,8 +49,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">9:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime9">
+            <th class="time-tbl row">9:00 AM</th>
+            <td>
               <textarea id="projectTime9" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -60,8 +60,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">10:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime10">
+            <th class="time-tbl row">10:00 AM</th>
+            <td>
               <textarea id="projectTime10" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -71,8 +71,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">11:00 AM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime11">
+            <th class="time-tbl row">11:00 AM</th>
+            <td>
               <textarea id="projectTime11" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -82,8 +82,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">12:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime12">
+            <th class="time-tbl row">12:00 PM</th>
+            <td>
               <textarea id="projectTime12" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -93,8 +93,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">1:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime13">
+            <th class="time-tbl row">1:00 PM</th>
+            <td>
               <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -104,8 +104,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">2:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime14">
+            <th class="time-tbl row">2:00 PM</th>
+            <td>
               <textarea id="projectTime14" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -115,8 +115,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">3:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime15">
+            <th class="time-tbl row">3:00 PM</th>
+            <td>
               <textarea id="projectTime15" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -126,8 +126,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">4:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime16">
+            <th class="time-tbl row">4:00 PM</th>
+            <td>
               <textarea id="projectTime16" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -137,8 +137,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">5:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime17">
+            <th class="time-tbl row">5:00 PM</th>
+            <td>
               <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
@@ -148,8 +148,8 @@
             </td>
           </tr>
           <tr>
-            <th class="time-tbl" scope="row">6:00 PM</th>
-            <td class="plan-event" data-toggle="modal" data-target="#plannerModal" id="projectTime18">
+            <th class="time-tbl row">6:00 PM</th>
+            <td>
               <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
             </td>
             <td class="plan-save">
