--- a/index.html
+++ b/index.html
@@ -38,123 +38,123 @@
         </thead>
         <tbody id="planner-table">
           <tr>
-            <th class="time-tbl row">8:00 AM</th>
+            <th class="row">8:00 AM</th>
             <td>
-              <textarea id="projectTime8" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime8" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 8am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project8btn" class="btn saveBtn" type="button" onClick="button(8)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">9:00 AM</th>
+            <th class="row">9:00 AM</th>
             <td>
-              <textarea id="projectTime9" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime9" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 9am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project9btn" class="btn saveBtn" type="button" onClick="button(9)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">10:00 AM</th>
+            <th class="row">10:00 AM</th>
             <td>
-              <textarea id="projectTime10" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime10" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 10am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project10btn" class="btn saveBtn" type="button" onClick="button(10)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">11:00 AM</th>
+            <th class="row">11:00 AM</th>
             <td>
-              <textarea id="projectTime11" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime11" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 11am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project11btn" class="btn saveBtn" type="button" onClick="button(11)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">12:00 PM</th>
+            <th class="row">12:00 PM</th>
             <td>
-              <textarea id="projectTime12" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime12" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 12pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project12btn" class="btn saveBtn" type="button" onClick="button(12)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">1:00 PM</th>
+            <th class="row">1:00 PM</th>
             <td>
-              <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 1pm></textarea>
             </td>
             <td class="plan-save">
               <button id="project13btn" class="btn saveBtn" type="button" onClick="button(13)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">2:00 PM</th>
+            <th class="row">2:00 PM</th>
             <td>
-              <textarea id="projectTime14" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime14" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 2pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project14btn" class="btn saveBtn" type="button" onClick="button(14)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">3:00 PM</th>
+            <th class="row">3:00 PM</th>
             <td>
-              <textarea id="projectTime15" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime15" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 3pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project15btn" class="btn saveBtn" type="button" onClick="button(15)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">4:00 PM</th>
+            <th class="row">4:00 PM</th>
             <td>
-              <textarea id="projectTime16" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime16" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 4pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project16btn" class="btn saveBtn" type="button" onClick="button(16)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">5:00 PM</th>
+            <th class="row">5:00 PM</th>
             <td>
-              <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 5pm></textarea>
             </td>
             <td class="plan-save">
               <button id="project17btn" class="btn saveBtn" type="button" onClick="button(17)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
           <tr>
-            <th class="time-tbl row">6:00 PM</th>
+            <th class="row">6:00 PM</th>
             <td>
-              <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+              <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 6pm></textarea>
             </td>
             <td class="plan-save">
               <button id="project18btn" class="btn saveBtn" type="button" onClick="button(18)">
-                <img class="save-img" src="./assets/images/diskette.png" alt="Save icons created by Yogi Aprelliyanto - Flaticon">
+                <img class="save-img" src="./assets/images/diskette.png" alt="Created by Yogi Aprelliyanto - Flaticon">
               </button>
             </td>
           </tr>
