--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <tr>
             <th class="row">1:00 PM</th>
             <td>
-              <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 1pm></textarea>
+              <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 1pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project13btn" class="btn saveBtn" type="button" onClick="button(13)">
