--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <tr>
             <th class="row">5:00 PM</th>
             <td>
-              <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 5pm></textarea>
+              <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 5pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project17btn" class="btn saveBtn" type="button" onClick="button(17)">
@@ -143,7 +143,7 @@
           <tr>
             <th class="row">6:00 PM</th>
             <td>
-              <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 6pm></textarea>
+              <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 6pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project18btn" class="btn saveBtn" type="button" onClick="button(18)">
