--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <tr>
             <th class="row">8:00 AM</th>
             <td>
-              <textarea id="projectTime8" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 8am"></textarea>
+              <textarea id="projectTime8" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 8am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project8btn" class="btn saveBtn" type="button" onClick="button(8)">
@@ -44,7 +44,7 @@
           <tr>
             <th class="row">9:00 AM</th>
             <td>
-              <textarea id="projectTime9" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 9am"></textarea>
+              <textarea id="projectTime9" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 9am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project9btn" class="btn saveBtn" type="button" onClick="button(9)">
@@ -55,7 +55,7 @@
           <tr>
             <th class="row">10:00 AM</th>
             <td>
-              <textarea id="projectTime10" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 10am"></textarea>
+              <textarea id="projectTime10" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 10am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project10btn" class="btn saveBtn" type="button" onClick="button(10)">
@@ -66,7 +66,7 @@
           <tr>
             <th class="row">11:00 AM</th>
             <td>
-              <textarea id="projectTime11" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 11am"></textarea>
+              <textarea id="projectTime11" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 11am"></textarea>
             </td>
             <td class="plan-save">
               <button id="project11btn" class="btn saveBtn" type="button" onClick="button(11)">
@@ -77,7 +77,7 @@
           <tr>
             <th class="row">12:00 PM</th>
             <td>
-              <textarea id="projectTime12" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 12pm"></textarea>
+              <textarea id="projectTime12" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 12pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project12btn" class="btn saveBtn" type="button" onClick="button(12)">
@@ -88,7 +88,7 @@
           <tr>
             <th class="row">1:00 PM</th>
             <td>
-              <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 1pm"></textarea>
+              <textarea id="projectTime13" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 1pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project13btn" class="btn saveBtn" type="button" onClick="button(13)">
@@ -99,7 +99,7 @@
           <tr>
             <th class="row">2:00 PM</th>
             <td>
-              <textarea id="projectTime14" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 2pm"></textarea>
+              <textarea id="projectTime14" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 2pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project14btn" class="btn saveBtn" type="button" onClick="button(14)">
@@ -110,7 +110,7 @@
           <tr>
             <th class="row">3:00 PM</th>
             <td>
-              <textarea id="projectTime15" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 3pm"></textarea>
+              <textarea id="projectTime15" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 3pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project15btn" class="btn saveBtn" type="button" onClick="button(15)">
@@ -121,7 +121,7 @@
           <tr>
             <th class="row">4:00 PM</th>
             <td>
-              <textarea id="projectTime16" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 4pm"></textarea>
+              <textarea id="projectTime16" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 4pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project16btn" class="btn saveBtn" type="button" onClick="button(16)">
@@ -132,7 +132,7 @@
           <tr>
             <th class="row">5:00 PM</th>
             <td>
-              <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 5pm"></textarea>
+              <textarea id="projectTime17" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 5pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project17btn" class="btn saveBtn" type="button" onClick="button(17)">
@@ -143,7 +143,7 @@
           <tr>
             <th class="row">6:00 PM</th>
             <td>
-              <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea" label="Text box for 6pm"></textarea>
+              <textarea id="projectTime18" value="" type="text" cols="100" rows="2" class="form-control description textarea" alt="Text box for 6pm"></textarea>
             </td>
             <td class="plan-save">
               <button id="project18btn" class="btn saveBtn" type="button" onClick="button(18)">
